--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,27 @@ Grid
 
 /*
 =====================
+Clearfix
+=====================
+*/
+
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+
+.group:after {
+  clear: both;
+}
+
+.group {
+  clear:both;
+  *zoom: 1;
+}
+
+/*
+=====================
 Typography
 =====================
 */
@@ -101,4 +122,31 @@ Home
 
 .hero{
   padding: 22px 80px 66px 80px;
+}
+
+/*
+=====================
+Primary Header
+=====================
+*/
+
+.logo {
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
+
+/*
+=====================
+Primary footer
+=====================
+*/
+
+.primary-footer small {
+  float: left;
+}
+
+.primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
 }
