--- a/css/styles.css
+++ b/css/styles.css
@@ -364,3 +364,21 @@ Columns
 .nav {
   text-align: right;
 }
+
+/*
+  ========================================
+  Speakers
+  ========================================
+*/
+  
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding: 22px 0;
+  text-align: center;
+}
+
+.speaker {
+  margin-bottom: 44px;
+}
